name:                cache
version:             0.1.0.0
synopsis:            Simulation of a simple, generalised CPU cache in Haskell
homepage:            https://github.com/basil-conto/cache
license:             BSD3
license-file:        LICENSE
author:              Basil L. Contovounesios
maintainer:          contovob@tcd.ie
category:            System
build-type:          Simple
cabal-version:       >= 1.10

executable cache
  ghc-options:         -Wall -O
  main-is:             Main.hs
  build-depends:       base   >= 4.6.*,
                       vector >= 0.10.*,
                       bv     >= 0.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
